--- a/index.html
+++ b/index.html
@@ -1,203 +1,180 @@
-<!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Anand Kummari | Applied Machine Learning Engineer</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>MyPortfolio</title>
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<style>
 
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Anand Kummari</h1>
-							<p>Applied Machine Learning Engineer building reliable AI systems used by real users.
+/* GLOBAL */
+body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;padding-top:75px}
+html{scroll-behavior:smooth}
 
-							I specialize in Large Language Models, Machine Learning, Computer Vision, and scalable ML pipelines — focusing on turning research ideas into production software. My work includes LLM assistants, visual search engines, and large-scale data processing systems deployed on AWS and GCP.
-							</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">View My Work</a></li>
-							</ul>
-						</div>
-					</section>
+/* NAVBAR */
+.nav-link{font-weight:500;margin-left:10px}
+.nav-link:hover{color:#0d6efd !important}
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>LLM Root Cause Analysis Assistant</h2>
-									<p>Designed and deployed a GPT-based system that analyzes operational issues and suggests resolutions automatically.
-									Reduced response time for merchant support teams by 40% and significantly lowered escalations. Built evaluation workflows, prompt versioning, and safe deployment strategies for production usage.
-									</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Visual Search Recommendation Engine</h2>
-									<p>Built a computer vision system that recommends visually similar products using deep embeddings and similarity search.
-										Recognized as a first-of-its-kind jewelry recommendation platform and improved customer engagement and conversion.
-									</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Large-Scale ML Pipeline Platform</h2>
-									<p>Designed end-to-end ML lifecycle pipelines on AWS handling ingestion, training, deployment, and monitoring.
-										Enabled multiple teams to deploy models reliably with automated validation, containerized inference, and rollback strategies.
-									</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
+/* ABOUT */
+#about{background:linear-gradient(to bottom,#f8f9fa,#ffffff)}
+.about-wrapper{max-width:1100px;margin:auto}
+.about-profile{display:flex;flex-direction:column;align-items:center}
 
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Skills</h2>
-							<p>I focus on building machine learning as software systems — reliable, observable, and maintainable in production environments.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Machine Learning & AI</h3>
-									<p>LLMs, RAG pipelines, Computer Vision, NLP, deep learning model training and evaluation</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Production ML Systems</h3>
-									<p>Model deployment, monitoring, drift detection, retraining workflows, API serving</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Cloud & Infrastructure</h3>
-									<p>AWS (SageMaker, Bedrock, Lambda, S3), Docker, Kubernetes, CI/CD pipelines</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Data Engineering</h3>
-									<p>Feature pipelines, batch & streaming processing, large-scale data ingestion</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Programming</h3>
-									<p>Python, PyTorch, TensorFlow, OpenCV, distributed processing tools</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Collaboration</h3>
-									<p>Working with product and platform teams to convert business problems into deployed AI features</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
+.about-image{
+width:230px;height:230px;border-radius:50%;
+overflow:hidden;border:7px solid white;
+box-shadow:0 18px 45px rgba(0,0,0,0.18);
+}
+.about-image img{width:100%;height:100%;object-fit:cover;object-position:50% 28%}
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>I am currently open to Machine Learning / Applied AI roles across the UK and EU and open to relocation and visa sponsorship.
-								The best way to reach me is via email or LinkedIn.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Anand Kummari</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">anandkummari113@gmail.com</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Based in India • Open to relocation to London, Berlin, Amsterdam</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>1-4-170/36, Old Alwal<br />
-											Hyderabad, Telangana 500010<br />
-											India</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:anandkummari113@gmail.com">anandkummari113@gmail.com</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(+91) 9848848075</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="https://github.com/anand-kummari" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/anand-kummari/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
+.about-badges{margin-top:20px;display:flex;flex-wrap:wrap;gap:10px;justify-content:center}
+.about-badges span{background:white;padding:6px 14px;border-radius:30px;font-size:.85rem;font-weight:500;box-shadow:0 6px 18px rgba(0,0,0,0.08)}
 
-			</div>
+.about-card{background:white;padding:38px;border-radius:22px;box-shadow:0 12px 35px rgba(0,0,0,0.08);max-width:640px}
+.about-highlight{font-size:1.35rem;font-weight:600;line-height:1.6;margin-bottom:20px;border-left:4px solid #0d6efd;padding-left:14px;color:#111}
+.about-body{color:#555;line-height:1.85;font-size:1.02rem}
+.about-body p{margin-bottom:16px}
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+/* PROJECTS */
+#projects{background:#f5f5f5}
+#projects .card{border:none;background:transparent}
+#projects .card-img-top{height:230px;object-fit:cover;border-radius:28px;transition:.3s}
+#projects .card:hover .card-img-top{transform:translateY(-6px);box-shadow:0 12px 25px rgba(0,0,0,.12)}
 
-	</body>
+/* SKILLS */
+#skills{background:#f8f9fa}
+.skill-icon{width:70px;height:70px;object-fit:contain}
+#skills .card{border-radius:16px;transition:.25s}
+#skills .card:hover{transform:translateY(-8px);box-shadow:0 14px 30px rgba(0,0,0,.12)}
+.skill-link{text-decoration:none;font-weight:600;color:#0d6efd}
+.skill-link:hover{text-decoration:underline}
+
+/* CONTACT */
+#contact{background:#111;color:white}
+.contact-icon{width:28px;filter:invert(1)}
+.social-btn{width:55px;height:55px;background:#222;border-radius:50%;display:flex;align-items:center;justify-content:center;transition:.25s}
+.social-btn img{width:26px;filter:invert(1)}
+.social-btn:hover{background:#0d6efd;transform:translateY(-5px)}
+
+</style>
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+<div class="container">
+<a class="navbar-brand fw-bold" href="#top">MyPortfolio</a>
+<button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu"><span class="navbar-toggler-icon"></span></button>
+<div class="collapse navbar-collapse" id="navmenu">
+<ul class="navbar-nav ms-auto">
+<li class="nav-item"><a class="nav-link" href="#top">Home</a></li>
+<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+<li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+<li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+</ul>
+</div>
+</div>
+</nav>
+
+<div id="top"></div>
+
+<!-- ABOUT -->
+<section id="about" class="py-5">
+<div class="container">
+<h1 class="display-3 fw-bold text-center mb-5">About</h1>
+
+<div class="row justify-content-center about-wrapper">
+
+<div class="col-lg-4 text-center mb-4 mb-lg-0">
+<div class="about-profile">
+<div class="about-image"><img src="images/about/about.jpg"></div>
+<div class="about-badges">
+<span>6+ Years Experience</span>
+<span>Production ML Systems</span>
+<span>LLM & GenAI</span>
+</div>
+</div>
+</div>
+
+<div class="col-lg-7">
+<div class="about-card">
+<p class="about-highlight">
+AI Engineer building production-grade intelligent systems across FinTech, Computer Vision and Generative AI.
+</p>
+<div class="about-body">
+<p>I am an Artificial Intelligence & Machine Learning Engineer with 6+ years of experience building and scaling production-grade intelligent systems across FinTech, computer vision, and generative AI domains. I specialize in taking ideas from research concepts to reliable customer-facing products — designing architectures, building data pipelines, deploying models, and ensuring they operate at scale in real environments. My work spans large-language-model applications, retrieval-augmented systems, real-time inference pipelines, and cloud-native ML platforms on AWS and GCP.</p>
+<p>Throughout my career I have led end-to-end initiatives including automated root-cause analysis platforms, large-scale language identification services, visual recommendation engines, and traffic intelligence systems. I regularly collaborate with product, engineering, and operations teams to translate business problems into measurable technical solutions, and I enjoy mentoring engineers while improving reliability and maintainability of ML systems. I focus on building practical AI that delivers impact — not just models that work in notebooks, but systems that businesses depend on every day.</p>
+</div>
+</div>
+</div>
+
+</div>
+</div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="py-5 text-center">
+<div class="container">
+<h1 class="display-3 fw-bold mb-5">Projects</h1>
+<div class="row g-5">
+
+<div class="col-lg-4 col-md-6">
+<div class="card h-100">
+<img src="images/projects/image_caption_generator.png" class="card-img-top">
+<div class="card-body"><h4>Image Caption Generation</h4></div>
+</div></div>
+
+<div class="col-lg-4 col-md-6">
+<div class="card h-100">
+<img src="images/projects/movie_recommendation_system_2.png" class="card-img-top">
+<div class="card-body"><h4>Movie Recommendation System</h4></div>
+</div></div>
+
+<div class="col-lg-4 col-md-6">
+<div class="card h-100">
+<img src="images/projects/campus_recruitment_system.png" class="card-img-top">
+<div class="card-body"><h4>Campus Recruitment System</h4></div>
+</div></div>
+
+</div>
+</div>
+</section>
+
+<!-- SKILLS -->
+<section id="skills" class="py-5 text-center">
+<div class="container">
+<h1 class="display-3 fw-bold mb-5">Skills</h1>
+<div class="row g-4">
+
+<div class="col-lg-3 col-md-6"><div class="card h-100"><div class="card-body"><img src="images/skills/python.png" class="skill-icon mb-3"><h5>Python</h5></div></div></div>
+<div class="col-lg-3 col-md-6"><div class="card h-100"><div class="card-body"><img src="images/skills/sql.png" class="skill-icon mb-3"><h5>SQL</h5></div></div></div>
+<div class="col-lg-3 col-md-6"><div class="card h-100"><div class="card-body"><img src="images/skills/ml.jpg" class="skill-icon mb-3"><h5>Machine Learning</h5></div></div></div>
+<div class="col-lg-3 col-md-6"><div class="card h-100"><div class="card-body"><img src="images/skills/data_visualization.jpg" class="skill-icon mb-3"><h5>Data Visualization</h5></div></div></div>
+
+</div>
+</div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="py-5 text-white text-center">
+<div class="container">
+<h1 class="display-3 fw-bold mb-5">Contact Me</h1>
+
+<p><img src="images/contact/email.png" class="contact-icon me-2"> anand.kummari@gmail.com</p>
+<p><img src="images/contact/phone.png" class="contact-icon me-2"> +91 9848848075</p>
+
+<div class="d-flex justify-content-center gap-4 mt-4">
+<a href="https://www.linkedin.com/in/anand-kummari/" class="social-btn"><img src="images/contact/linkedin.png"></a>
+<a href="https://github.com/anand-kummari" class="social-btn"><img src="images/contact/github.png"></a>
+</div>
+
+</div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
